<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/imageContainer"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_margin="20dp"
        android:layout_weight="1" />


    <TextView
        android:id="@+id/scoreDisplay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:text="Score: 0"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center" />


    <FrameLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
